--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ h3 {
 
 h1 {
   font-size: 96px;
+  text-align: center;
 }
 
 h2 {
@@ -110,4 +111,9 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+.center{
+  display: flex;
+  justify-content: center;
 }
